--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUNToCPD62kdmBbq3qSSZ3",
+      "authorship_tag": "ABX9TyODLxNFZYtu75ru/M7RigK2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,7 +92,7 @@
         "          <li>Imputación de Valores Faltantes</li>\n",
         "          <li>Detección y Manejo de Valores Sospechosos</li>\n",
         "          <li>Identificación de la Cardinalidad de las Variables</li>\n",
-        "          <li>Feature Engineering (Generación de Nuevas Características) 🟡</li>\n",
+        "          <li>Feature Engineering (Generación de Nuevas Características)</li>\n",
         "          <li>Transformación de Datos (Normalización) 🔴</li>\n",
         "          <li>Feature Binning (Agrupación de Características)</li>\n",
         "        </ul>\n",
@@ -2280,56 +2280,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Coeficiente de variación (CV) de las distintas columnas"
-      ],
-      "metadata": {
-        "id": "ZAw8QRhAB6xW"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Calculo el coeficiente de variación (CV) a fin de determinar la dispersión de los conjuntos de datos respecto a la media.\n",
-        "# Si el CV es <= 30% se dice que los datos son relativamente homogéneos.\n",
-        "\n",
-        "encabezados = df.columns.values[1:]\n",
-        "\n",
-        "for i in range(len(encabezados)):\n",
-        "  coefVar = (df[encabezados[i]].std() / df[encabezados[i]].mean()) * 100\n",
-        "  print(f\"CV {encabezados[i]}: {coefVar.round(2)}\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UKkZQpB5P-cL",
-        "outputId": "92339658-dca4-4a00-9401-45143384eb0b"
-      },
-      "execution_count": 73,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "CV fixed acidity: 18.27\n",
-            "CV volatile acidity: 48.87\n",
-            "CV citric acid: 46.14\n",
-            "CV residual sugar: 89.1\n",
-            "CV chlorides: 65.01\n",
-            "CV free sulfur dioxide: 59.27\n",
-            "CV total sulfur dioxide: 49.73\n",
-            "CV density: 0.3\n",
-            "CV pH: 4.97\n",
-            "CV sulphates: 28.07\n",
-            "CV alcohol: 11.24\n",
-            "CV quality: 15.18\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "df.nunique()"
@@ -2449,15 +2399,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "RfEBwD9rIDfr"
-      },
-      "execution_count": 74,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "### **🔘 FEATURE ENGINEERING (Generación de Nuevas Características)**"
@@ -2468,10 +2409,132 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Se crean nuevas variables a partir de las existentes a fin de aportar mayor información al modelo de Machine Learning objetivo ayudando a capturar relaciones más complejas entre las características del vino y mejorar su rendimiento."
+      ],
       "metadata": {
         "id": "q1auR12qGNQ0"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Relaciones entre Ácidos: Se sumar la acidez fija y la acidez volátil para obtener una medida de la acidez total. $$ \\text{Total Acidity} = \\text{Fixed Acidity} + \\text{Volatile Acidity} $$"
+      ],
+      "metadata": {
+        "id": "H1IBgzcOzqSn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['total acidity'] = df['fixed acidity'] + df['volatile acidity']"
+      ],
+      "metadata": {
+        "id": "RNgAHelZzZs9"
+      },
+      "execution_count": 134,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Proporciones de Azufre: Se calcula la proporción de dióxido de azufre libre respecto al total. $$ \\text{Prop Sulful} = \\frac{\\text{Free Sulfur Dioxide}}{\\text{Total Sulfur Dioxide}} $$"
+      ],
+      "metadata": {
+        "id": "NlHtN5OPzthN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['prop sulful'] = df['free sulfur dioxide'] / df['total sulfur dioxide']"
+      ],
+      "metadata": {
+        "id": "hpG1MPDtz3Y2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Densidad Ajustada ('ajust density'): Se ajusta la densidad del vino teniendo en cuenta el contenido de alcohol. $$ \\text{density Ajust} = \\frac{\\text{Density}}{\\text{Alcohol}} $$"
+      ],
+      "metadata": {
+        "id": "u2rmpk94zvY-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['ajust density'] = df['density'] / df['alcohol']"
+      ],
+      "metadata": {
+        "id": "H0LoX_rZz4Vf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Índice de Dulzura: Se calcula la proporción de azúcar residual respecto a la acidez total. $$ \\text{Sweetness} = \\frac{\\text{Residual Sugar}}{\\text{Total Acidity}} $$"
+      ],
+      "metadata": {
+        "id": "YVNh3yx1zxb0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['sweetness'] = df['residual sugar'] / df['total acidity']"
+      ],
+      "metadata": {
+        "id": "XlYdfgYYz4nX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. Índice de Sulfitos: Se calcula la proporción de sulfatos respecto a los cloruros. $$ \\text{sulphate index} = \\frac{\\text{Sulphates}}{\\text{Chlorides}} $$"
+      ],
+      "metadata": {
+        "id": "Y-CiXAtVzzGa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['sulphate index'] = df['sulphates'] / df['chlorides']"
+      ],
+      "metadata": {
+        "id": "7qhrFRyNz41v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6. Índice de Acidez: Se ajustar la acidez fija por el pH para obtener una medida más precisa de la acidez percibida. $$ \\text{acidity index} = \\frac{\\text{Fixed Acidity}}{\\text{pH}} $$"
+      ],
+      "metadata": {
+        "id": "mSmjWBfdz0QX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['acidity index'] = df['fixed acidity'] / df['pH']"
+      ],
+      "metadata": {
+        "id": "gFY9OFVGz5C6"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
