--- a/proyecto_Final_INGARAMO.ipynb
+++ b/proyecto_Final_INGARAMO.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMIu1HPkRuBM2Qp11IL7iSt",
+      "authorship_tag": "ABX9TyMlRDI+XEdP1rdTfT+76fvF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13651,7 +13651,7 @@
           "height": 714
         }
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13796,52 +13796,137 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "df.info()"
+        "El valor de VIF comienza en 1 y no tiene límite superior. Como regla general se interpreta el VIF de la siguiente manera:\n",
+        "\n",
+        "* **VIF = 1:** no hay colinealidad entre la variable predictora y las demás variables. Esto significa que la variable no está correlacionada con ninguna otra variable en el modelo.\n",
+        "\n",
+        "* **1 < VIF < 5:** generalmente se considera aceptable y sugiere una colinealidad leve o moderada entre la variable predictora y otras variables. No es motivo de preocupación, pero se debe tener en cuenta al interpretar los coeficientes del modelo.\n",
+        "\n",
+        "* **VIF > 5:** indica una colinealidad sustancial entre la variable predictora y al menos una de las otras variables. Esto puede sugerir que la variable está  muy correlacionada con otras variables y puede dificultar la interpretación de los coeficientes del modelo.\n",
+        "\n",
+        "En casos donde el VIF es extremadamente alto (por ejemplo, superior a 10 o 20), se considera que la colinealidad es muy fuerte. Esto indica que la variable está altamente correlacionada con otras variables y puede afectar significativamente las estimaciones de los coeficientes de regresión."
       ],
       "metadata": {
-        "id": "82KUL3Nu52_o",
-        "outputId": "f0dcb708-9a29-45f6-c814-2d4bc8ceac0d",
+        "id": "dDhtkeC77XjV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Remuevo algunas variables fuermentente correlacionadas\n",
+        "\n",
+        "df_Multicol = df[['citric acid', 'chlorides', 'density', 'sulphates', 'total acidity', 'prop sulful', 'ajust density', 'sweetness', 'sulphate index', 'acidity index','quality']]\n",
+        "df_Multicol=df_Multicol.astype(float)\n",
+        "variance_inflation_factors(df_Multicol)"
+      ],
+      "metadata": {
+        "id": "JX19ioLX8ZM2",
+        "outputId": "0ef61bfe-cfce-4b3c-f012-a17d24f8059c",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 460
         }
       },
-      "execution_count": 114,
+      "execution_count": 120,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 5290 entries, 0 to 5289\n",
-            "Data columns (total 21 columns):\n",
-            " #   Column                Non-Null Count  Dtype   \n",
-            "---  ------                --------------  -----   \n",
-            " 0   type                  5290 non-null   int64   \n",
-            " 1   fixed acidity         5290 non-null   float64 \n",
-            " 2   volatile acidity      5290 non-null   float64 \n",
-            " 3   citric acid           5290 non-null   float64 \n",
-            " 4   residual sugar        5290 non-null   float64 \n",
-            " 5   chlorides             5290 non-null   float64 \n",
-            " 6   free sulfur dioxide   5290 non-null   float64 \n",
-            " 7   total sulfur dioxide  5290 non-null   float64 \n",
-            " 8   density               5290 non-null   float64 \n",
-            " 9   pH                    5290 non-null   float64 \n",
-            " 10  sulphates             5290 non-null   float64 \n",
-            " 11  alcohol               5290 non-null   float64 \n",
-            " 12  quality               5290 non-null   int64   \n",
-            " 13  total acidity         5290 non-null   float64 \n",
-            " 14  prop sulful           5290 non-null   float64 \n",
-            " 15  ajust density         5290 non-null   float64 \n",
-            " 16  sweetness             5290 non-null   float64 \n",
-            " 17  sulphate index        5290 non-null   float64 \n",
-            " 18  acidity index         5290 non-null   float64 \n",
-            " 19  gama                  5290 non-null   category\n",
-            " 20  gamaNro               5290 non-null   int64   \n",
-            "dtypes: category(1), float64(17), int64(3)\n",
-            "memory usage: 832.1 KB\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "const             1.819629e+06\n",
+              "citric acid       1.404370e+00\n",
+              "chlorides         2.737751e+00\n",
+              "density           1.622364e+01\n",
+              "sulphates         3.247052e+00\n",
+              "total acidity     5.034927e+01\n",
+              "prop sulful       1.182757e+00\n",
+              "ajust density     4.827594e+00\n",
+              "sweetness         5.705297e+00\n",
+              "sulphate index    3.434340e+00\n",
+              "acidity index     3.207939e+01\n",
+              "quality           1.386443e+00\n",
+              "Name: VIF, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>VIF</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>const</th>\n",
+              "      <td>1.819629e+06</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>citric acid</th>\n",
+              "      <td>1.404370e+00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>chlorides</th>\n",
+              "      <td>2.737751e+00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>density</th>\n",
+              "      <td>1.622364e+01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>sulphates</th>\n",
+              "      <td>3.247052e+00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>total acidity</th>\n",
+              "      <td>5.034927e+01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>prop sulful</th>\n",
+              "      <td>1.182757e+00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ajust density</th>\n",
+              "      <td>4.827594e+00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>sweetness</th>\n",
+              "      <td>5.705297e+00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>sulphate index</th>\n",
+              "      <td>3.434340e+00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>acidity index</th>\n",
+              "      <td>3.207939e+01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>quality</th>\n",
+              "      <td>1.386443e+00</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 120
         }
       ]
     },
