--- a/proyecto_Final_INGARAMO.ipynb
+++ b/proyecto_Final_INGARAMO.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMZOqyz3xeCkWZUU4TlaiK1",
+      "authorship_tag": "ABX9TyMTdWoMHk0DLZ6fXcT5Vrvr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,7 @@
       "cell_type": "markdown",
       "source": [
         "<a id=\"1\"></a>\n",
-        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b>🔲 CONTENIDO DEL PROYECTO </b></div>"
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b>#️⃣ CONTENIDO DEL PROYECTO </b></div>"
       ],
       "metadata": {
         "id": "pjiNlhSBn-2T"
@@ -128,7 +128,7 @@
       "cell_type": "markdown",
       "source": [
         "<a id=\"1\" href=\"#introduccion\"></a>\n",
-        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b>🔲 INTRODUCCION </b></div>"
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b>0️⃣ INTRODUCCION </b></div>"
       ],
       "metadata": {
         "id": "LPhlcsIJejhK"
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "ARSXBew0ENqE"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -172,7 +172,7 @@
       "cell_type": "markdown",
       "source": [
         "<a id=\"1\"></a>\n",
-        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b>🔲 OBJETIVO e HIPÓTESIS </b></div>"
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b>1️⃣ OBJETIVO e HIPÓTESIS </b></div>"
       ],
       "metadata": {
         "id": "i9n9VKMRg7ZA"
@@ -198,7 +198,7 @@
       "cell_type": "markdown",
       "source": [
         "<a id=\"1\"></a>\n",
-        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b>🔲 EL SET DE DATOS </b></div>"
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b>2️⃣ EL SET DE DATOS </b></div>"
       ],
       "metadata": {
         "id": "RUA-IKofnavn"
@@ -271,7 +271,7 @@
       "cell_type": "markdown",
       "source": [
         "<a id=\"1\"></a>\n",
-        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b>🔲 PRE-PROCESAMIENTO DE DATOS </b></div>"
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b>3️⃣ PRE-PROCESAMIENTO DE DATOS </b></div>"
       ],
       "metadata": {
         "id": "678TtHrMqL3f"
@@ -279,7 +279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "ZcCNhdHM_4K_"
       },
@@ -342,7 +342,7 @@
         "id": "w0ux86UfDkJD",
         "outputId": "9fbb9162-46af-42e0-e5be-ccfaacb37a26"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -752,7 +752,7 @@
         "id": "swUMxE7mEatR",
         "outputId": "790069a9-08b4-4836-e6ce-10fa992af72f"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -795,7 +795,7 @@
         "id": "BV_nDzupQt7W",
         "outputId": "4169a5e6-318a-42be-91c1-f9e026f35937"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -834,7 +834,7 @@
         "id": "TxU-xewjhH1n",
         "outputId": "1146d644-5ecf-4321-e144-26cf82865d4d"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1251,7 +1251,7 @@
         "id": "6xnagbRzrBow",
         "outputId": "4dffdef9-d872-4987-fccb-13250d427997"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1298,7 +1298,7 @@
         "id": "Uri8fSIReBF5",
         "outputId": "311940c1-9c4c-4b1c-8665-2d2e96c54412"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1646,7 +1646,7 @@
         "id": "MgXKUH8bZWsJ",
         "outputId": "fb68c03d-c52d-4382-f15b-ec5567bd48c8"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1684,7 +1684,7 @@
         "id": "3SSmPIEqcFo4",
         "outputId": "05f5bd82-b5d1-477e-e2bf-06094190d2b8"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2213,7 +2213,7 @@
         },
         "outputId": "79609ad3-fd11-40ce-d471-5840bd570eea"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2269,7 +2269,7 @@
         "id": "IjYghh0TRF7_",
         "outputId": "e2ecb2ed-01c5-4831-9224-163809755a54"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2312,7 +2312,7 @@
         "id": "8TO2zxDHnzAX",
         "outputId": "66f0a411-362b-4de9-eb14-031430c69bb5"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2422,7 +2422,7 @@
       "cell_type": "markdown",
       "source": [
         "<a id=\"1\"></a>\n",
-        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b>🔲 ANÁLISIS EXPLORATORIO DE DATOS </b></div>"
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b>4️⃣ ANÁLISIS EXPLORATORIO DE DATOS </b></div>"
       ],
       "metadata": {
         "id": "Q17TVK9uH4qm"
@@ -2472,7 +2472,7 @@
       "metadata": {
         "id": "USpGFhwqUyGV"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2490,7 +2490,7 @@
         "id": "h6dovbVwQeT5",
         "outputId": "21520177-daf5-4d07-e6bd-1acefb97833d"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2920,7 +2920,7 @@
         "id": "NFTcLMxmVA4v",
         "outputId": "acff22c1-524d-4a20-e421-f26447746f73"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3365,7 +3365,7 @@
         "id": "CRlWyhe7Zjed",
         "outputId": "8fad6286-5cca-4397-c1c1-a982b452298d"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3411,7 +3411,7 @@
         "id": "lbWq_gXNa7qN",
         "outputId": "37a2e9a5-ce49-44e1-9e1c-64cf0c47cbf2"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3441,7 +3441,7 @@
         "id": "7Zfje52sawZP",
         "outputId": "5889f01f-ee09-45ec-a582-580ca3a59b35"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3512,7 +3512,7 @@
         "id": "-biDo45QmMb8",
         "outputId": "0d6fc218-5685-49e8-f5c8-12ea5339b147"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3569,7 +3569,7 @@
         "id": "bHi20NVoY4am",
         "outputId": "bdadbe39-6de8-4a37-fae0-28b2b387948d"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4042,7 +4042,7 @@
         "id": "mqikp92cQqln",
         "outputId": "eee7c574-3b3c-4e05-d69e-c0b6298f11de"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4087,7 +4087,7 @@
         "id": "7m91ejFVFXlW",
         "outputId": "838324ed-65e8-4d59-e7ba-066a9633d114"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4129,7 +4129,7 @@
         "id": "M7gOkjGC71s_",
         "outputId": "4c572e08-628d-4c4f-a204-f4e63fbd3b32"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4301,7 +4301,7 @@
           "height": 191
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4345,7 +4345,7 @@
           "height": 394
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4799,7 +4799,7 @@
           "height": 394
         }
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5270,7 +5270,7 @@
           "height": 209
         }
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5324,7 +5324,7 @@
       "metadata": {
         "id": "GV39GFDfOjUf"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5354,7 +5354,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5412,7 +5412,7 @@
           "height": 1000
         }
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5544,7 +5544,7 @@
           "height": 394
         }
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5990,7 +5990,7 @@
           "height": 290
         }
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6442,7 +6442,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6468,7 +6468,7 @@
           "height": 354
         }
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6897,7 +6897,7 @@
           "height": 354
         }
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7320,7 +7320,7 @@
       "metadata": {
         "id": "-eK9a7KVOxLl"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7344,7 +7344,7 @@
           "height": 394
         }
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7739,7 +7739,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7793,7 +7793,7 @@
       "metadata": {
         "id": "UP5gsDnMLN-A"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7835,7 +7835,7 @@
           "height": 174
         }
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8198,7 +8198,7 @@
           "height": 791
         }
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9140,7 +9140,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9174,7 +9174,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9220,7 +9220,7 @@
           "height": 334
         }
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9345,7 +9345,7 @@
           "height": 1000
         }
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9487,7 +9487,7 @@
           "height": 125
         }
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9825,7 +9825,7 @@
           "height": 793
         }
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10585,7 +10585,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10620,7 +10620,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10670,7 +10670,7 @@
           "height": 334
         }
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10764,7 +10764,7 @@
           "height": 115
         }
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10835,7 +10835,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10860,7 +10860,7 @@
       "metadata": {
         "id": "bvLAKOIiKw9r"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10909,7 +10909,7 @@
           "height": 1000
         }
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10985,7 +10985,7 @@
           "height": 1000
         }
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11170,7 +11170,7 @@
       "cell_type": "markdown",
       "source": [
         "<a id=\"1\"></a>\n",
-        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b>🔲 FEATURE ENGINEERING </b></div>"
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b>5️⃣ FEATURE ENGINEERING </b></div>"
       ],
       "metadata": {
         "id": "YVnRQLWqGHyk"
