--- a/proyecto_Final_INGARAMO.ipynb
+++ b/proyecto_Final_INGARAMO.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMy9/SYFoqdyFW/R/tamjH9",
+      "authorship_tag": "ABX9TyMYcgCrY0L7peQySzMFpdOm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +84,7 @@
         "    <li>INTRODUCCIÓN</li>\n",
         "    <li>OBJETIVOS e HIPÓTESIS</li>\n",
         "    <li>EL SET DE DATOS</li>\n",
-        "    <li>PROCESAMIENTO DE DATOS\n",
+        "    <li>PRE-PROCESAMIENTO DE DATOS\n",
         "    <ul>\n",
         "      <li>Carga de Datos</li>\n",
         "      <li>Data Wrangling\n",
@@ -92,9 +92,6 @@
         "          <li>Detección y Remoción de Valores Duplicados</li>\n",
         "          <li>Imputación de Valores Faltantes</li>\n",
         "          <li>Detección y Manejo de Valores Sospechosos</li>\n",
-        "          <li>Feature Engineering (Generación de Nuevas Características)</li>\n",
-        "          <li>Transformación de Datos (Normalización) 🔴</li>\n",
-        "          <li>Feature Binning (Agrupación de Características)</li>\n",
         "        </ul>\n",
         "      </li>\n",
         "    </ul>\n",
@@ -104,15 +101,24 @@
         "        <li>Análisis Univariado</li>\n",
         "          <ul>\n",
         "            <li>Análisis Estadístico</li>\n",
-        "            <li>Análisis de Distribución de las Variables</li>\n",
+        "            <li>Análisis de Distribución de los datos</li>\n",
         "            <li>Detección y Manejo de Outliers</li>\n",
         "          </ul>\n",
         "        <li>Análisis Bivariado</li>\n",
         "          <ul>\n",
         "            <li>Análisis de Correlación y Dependencia entre Variables 🟡</li>\n",
         "          </ul>\n",
-        "        <li>Análisis Multivariado 🟡</li>\n",
-        "        <li>Escalado (Estandarización de los Datos) 🟡</li>\n",
+        "        <li>Análisis Multivariado</li>\n",
+        "          <ul>\n",
+        "            <li>Análisis de Multicolinealidad</li>\n",
+        "          </ul>\n",
+        "        <li>Feature Engineering</li>\n",
+        "          <ul>\n",
+        "            <li>Feature Creation - Generación de Variables</li>\n",
+        "            <li>Feature Binning - Agrupación de Características</li>\n",
+        "            <li>Transformación de Datos (Normalización) 🔴</li>\n",
+        "            <li>Escalado (Estandarización de los Datos) 🟡</li>  \n",
+        "          </ul>\n",
         "      </ul>\n",
         "    </li>\n",
         "    <li>CONCLUSIÓN</li>\n",
