--- a/proyecto_Final_INGARAMO.ipynb
+++ b/proyecto_Final_INGARAMO.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMYcgCrY0L7peQySzMFpdOm",
+      "authorship_tag": "ABX9TyNAM6jqnj8kvrjq3F1UZGG1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,10 +81,10 @@
       "source": [
         "<div class=\"toc\">\n",
         "  <ul>\n",
-        "    <li>INTRODUCCIÓN</li>\n",
-        "    <li>OBJETIVOS e HIPÓTESIS</li>\n",
-        "    <li>EL SET DE DATOS</li>\n",
-        "    <li>PRE-PROCESAMIENTO DE DATOS\n",
+        "    <li>1 - INTRODUCCIÓN</li>\n",
+        "    <li>2 - OBJETIVOS e HIPÓTESIS</li>\n",
+        "    <li>3 - EL SET DE DATOS</li>\n",
+        "    <li>4 - PRE-PROCESAMIENTO DE DATOS\n",
         "    <ul>\n",
         "      <li>Carga de Datos</li>\n",
         "      <li>Data Wrangling\n",
@@ -96,7 +96,7 @@
         "      </li>\n",
         "    </ul>\n",
         "    </li>\n",
-        "    <li>ANÁLISIS EXPLORATORIO DE DATOS (EDA)\n",
+        "    <li>5 - ANÁLISIS EXPLORATORIO DE DATOS (EDA)\n",
         "      <ul>\n",
         "        <li>Análisis Univariado</li>\n",
         "          <ul>\n",
@@ -112,15 +112,14 @@
         "          <ul>\n",
         "            <li>Análisis de Multicolinealidad</li>\n",
         "          </ul>\n",
-        "        <li>Feature Engineering</li>\n",
-        "          <ul>\n",
-        "            <li>Feature Creation - Generación de Variables</li>\n",
-        "            <li>Feature Binning - Agrupación de Características</li>\n",
-        "            <li>Transformación de Datos (Normalización) 🔴</li>\n",
-        "            <li>Escalado (Estandarización de los Datos) 🟡</li>  \n",
-        "          </ul>\n",
+        "      </ul>          \n",
+        "    <li>6 - FEATURE ENGINEERING\n",
+        "      <ul>\n",
+        "        <li>Feature Creation - Generación de Variables</li>\n",
+        "        <li>Feature Binning - Agrupación de Características</li>\n",
+        "        <li>Transformación de Datos (Normalización) 🔴</li>\n",
+        "        <li>Escalado (Estandarización de los Datos) 🟡</li>  \n",
         "      </ul>\n",
-        "    </li>\n",
         "    <li>CONCLUSIÓN</li>\n",
         "    <li>REFERENCIAS</li>\n",
         "  </ul>\n",
